--- a/linen-starter/src/main/res/animator/h2_back_slide_in.xml
+++ b/linen-starter/src/main/res/animator/h2_back_slide_in.xml
@@ -2,16 +2,26 @@
 <set
     xmlns:android="http://schemas.android.com/apk/res/android"
     >
-    <!--android:startOffset="200"-->
+    <scale
+        android:startOffset="100"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:fromXScale="0.95"
+        android:toXScale="1.0"
+        android:fromYScale="0.95"
+        android:toYScale="1.0"
+        android:duration="250"
+        android:pivotY="50%"
+        android:pivotX="50%"
+        />
 
     <set
         android:interpolator="@android:anim/decelerate_interpolator"
+        android:startOffset="100"
         >
-        <translate
-            android:duration="300"
-            android:fromXDelta="-100%"
-            android:toXDelta="0%"
+        <alpha
+            android:duration="250"
+            android:fromAlpha="0.5"
+            android:toAlpha="1.0"
             />
-
     </set>
 </set>
