--- a/linen-starter/src/main/res/animator/h2_slide_in.xml
+++ b/linen-starter/src/main/res/animator/h2_slide_in.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     >
     <set
-        android:interpolator="@android:anim/accelerate_interpolator"
+        android:startOffset="50"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
         >
         <translate
             android:duration="250"
@@ -11,4 +12,5 @@
             android:toXDelta="0%"
             />
     </set>
+
 </set>
