add footer in outline list

--- a/linen-starter/src/main/res/layout/unread_outline_row__footer.xml
+++ b/linen-starter/src/main/res/layout/unread_outline_row__footer.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentTop="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="source: footer!!"
+        android:text="outline: footer!!"
         />
 
 </RelativeLayout>
