--- a/linen-starter/src/main/res/layout/unread_outline_row__footer.xml
+++ b/linen-starter/src/main/res/layout/unread_outline_row__footer.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="14dp"
-    android:paddingBottom="12dp"
     >
+    <include layout="@layout/tools_progress_indeterminate_h"/>
+
     <TextView
         android:textSize="17sp"
         android:textColor="@color/text_primary"
