--- a/linen-starter/src/main/res/layout/unread_source_row__footer.xml
+++ b/linen-starter/src/main/res/layout/unread_source_row__footer.xml
@@ -3,15 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="14dp"
-    android:paddingBottom="12dp"
     >
+    <include layout="@layout/tools_progress_indeterminate_h"/>
+
     <TextView
         android:textSize="17sp"
         android:textColor="@color/text_primary"
-        android:layout_alignParentTop="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/indeterminate_progress_bar"
         android:text="source: footer!!"
         />
 
