--- a/linen-starter/src/main/res/layout/setting_my_channels_layout.xml
+++ b/linen-starter/src/main/res/layout/setting_my_channels_layout.xml
@@ -13,7 +13,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/setting_my_channels_layout__toolbar"
             style="@style/AppToolbar"
-            app:title="Channel Settings"
+            app:title="My Channels"
             />
 
     </android.support.design.widget.AppBarLayout>
