--- a/linen-starter/src/main/res/layout/setting_my_channels_layout.xml
+++ b/linen-starter/src/main/res/layout/setting_my_channels_layout.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+
+<LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -27,3 +33,10 @@
         android:overScrollMode="never"
         />
 </LinearLayout>
+
+<android.support.design.widget.FloatingActionButton
+    android:id="@+id/setting_my_channels_layout__button_to_create"
+    style="@style/AppFloatingActionButton"
+    />
+
+</RelativeLayout>
