add tooltip when sliding rating bar

--- a/linen-starter/src/main/res/layout/setting_channel_sources_row.xml
+++ b/linen-starter/src/main/res/layout/setting_channel_sources_row.xml
@@ -77,6 +77,15 @@
         />
 
     <TextView
+        android:id="@+id/setting_channel_sources_row__rating_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/setting_channel_sources_row__rating_bar"
+        android:text="95"
+        />
+    <!--android:layout_toStartOf="@id/setting_channel_sources_row__rating_bar"-->
+
+    <TextView
         android:id="@+id/setting_channel_sources_row__rating_label"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
