add elevation to rating tooltip

--- a/linen-starter/src/main/res/layout/setting_channel_sources_row.xml
+++ b/linen-starter/src/main/res/layout/setting_channel_sources_row.xml
@@ -88,6 +88,7 @@
         android:background="@drawable/bg_rating_tooltip"
         android:gravity="center_vertical|center_horizontal"
         android:textColor="@android:color/white"
+        android:elevation="5dp"
         />
 
     <TextView
