--- a/linen-starter/src/main/res/layout/setting_my_channel_create.xml
+++ b/linen-starter/src/main/res/layout/setting_my_channel_create.xml
@@ -6,8 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusableInTouchMode="true"
-    android:paddingStart="8dp"
-    android:paddingEnd="8dp"
+    android:paddingStart="32dp"
+    android:paddingEnd="20dp"
+    android:paddingTop="12dp"
     >
 
     <android.support.design.widget.TextInputLayout
