--- a/linen-starter/src/main/res/layout/setting_channel_sources_row.xml
+++ b/linen-starter/src/main/res/layout/setting_channel_sources_row.xml
@@ -10,13 +10,13 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/setting_channels_row_padding"
     >
 
     <TextView
         android:id="@+id/setting_channel_sources_row__title"
-        android:paddingStart="@dimen/setting_channels_row_padding"
+        android:paddingTop="@dimen/setting_channels_row_padding"
         android:paddingEnd="@dimen/setting_channels_row_padding"
+        android:paddingStart="@dimen/setting_channels_row_padding"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
@@ -30,8 +30,10 @@
         android:id="@+id/setting_channel_sources_row__menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="8dp"
+        android:paddingTop="@dimen/setting_channels_row_padding"
         android:paddingEnd="8dp"
+        android:paddingBottom="@dimen/setting_channels_row_padding"
+        android:paddingStart="8dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:src="@drawable/ic_more_vert_24dp"
