bugfix to broaden menu out

--- a/linen-starter/src/main/res/layout/unread_items_layout.xml
+++ b/linen-starter/src/main/res/layout/unread_items_layout.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:id="@+id/unread_items_layout__menu_area"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@android:color/white"
         android:orientation="vertical"
