--- a/linen-starter/src/main/res/layout/setting_channel_sources_row.xml
+++ b/linen-starter/src/main/res/layout/setting_channel_sources_row.xml
@@ -10,10 +10,11 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/setting_channels_row_padding"
+    android:paddingTop="12dp"
     >
     <TextView
         android:id="@+id/setting_channel_sources_row__title"
+        android:paddingTop="4dp"
         android:paddingEnd="@dimen/setting_channels_row_padding"
         android:paddingStart="@dimen/setting_channels_row_padding"
         android:layout_width="match_parent"
@@ -29,7 +30,9 @@
         android:id="@+id/setting_channel_sources_row__menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="4dp"
         android:paddingEnd="8dp"
+        android:paddingBottom="4dp"
         android:paddingStart="8dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
