add menu button to my channel row

--- a/linen-starter/src/main/res/layout/setting_my_channel_row__item.xml
+++ b/linen-starter/src/main/res/layout/setting_my_channel_row__item.xml
@@ -25,6 +25,20 @@
         android:textColor="@color/text_primary"
         />
 
+    <ImageButton
+        android:id="@+id/setting_my_channel_row__item__menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="4dp"
+        android:paddingEnd="8dp"
+        android:paddingBottom="4dp"
+        android:paddingStart="8dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/ic_more_vert_24dp"
+        android:background="?android:selectableItemBackgroundBorderless"
+        />
+
     <TextView
         android:id="@+id/setting_my_channel_row__item__description"
         android:paddingTop="4dp"
