--- a/linen-starter/src/main/res/layout/setting_my_channel_row__item.xml
+++ b/linen-starter/src/main/res/layout/setting_my_channel_row__item.xml
@@ -43,12 +43,11 @@
         android:id="@+id/setting_my_channel_row__item__description"
         android:paddingTop="4dp"
         android:paddingEnd="@dimen/setting_channels_row_padding"
-        android:paddingBottom="4dp"
         android:paddingStart="@dimen/setting_channels_row_padding"
         android:layout_below="@id/setting_my_channel_row__item__name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/setting_channels_row_padding"
+        android:layout_marginBottom="12dp"
         android:textSize="15sp"
         android:textColor="@color/text_secondary"
         android:lineSpacingMultiplier="1.2"
@@ -67,12 +66,10 @@
     <android.support.v7.widget.SwitchCompat
         android:id="@+id/setting_my_channel_row__item__switch_subscribe"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_below="@id/border"
         android:layout_alignParentEnd="true"
-        android:paddingTop="@dimen/setting_channels_row_padding"
         android:paddingEnd="12dp"
-        android:paddingBottom="@dimen/setting_channels_row_padding"
         android:paddingStart="4dp"
         />
 
