--- a/linen-starter/src/main/res/layout/setting_preset_channel_row.xml
+++ b/linen-starter/src/main/res/layout/setting_preset_channel_row.xml
@@ -45,7 +45,7 @@
         android:layout_below="@id/setting_preset_channel_row__name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/setting_channels_row_padding"
+        android:layout_marginBottom="12dp"
         android:textSize="15sp"
         android:textColor="@color/text_secondary"
         android:lineSpacingMultiplier="1.2"
@@ -64,12 +64,10 @@
     <android.support.v7.widget.SwitchCompat
         android:id="@+id/setting_preset_channel_row__switch_subscribe"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_below="@id/border"
         android:layout_alignParentEnd="true"
-        android:paddingTop="@dimen/setting_channels_row_padding"
         android:paddingEnd="12dp"
-        android:paddingBottom="@dimen/setting_channels_row_padding"
         android:paddingStart="4dp"
         />
 
