--- a/linen-starter/src/main/res/layout/setting_updater_layout.xml
+++ b/linen-starter/src/main/res/layout/setting_updater_layout.xml
@@ -20,7 +20,7 @@
         android:id="@+id/setting_updater_layout__update_channels"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="update all channels"
+        android:text="Load now"
         />
 
 </LinearLayout>
