--- a/linen-starter/src/main/res/layout/setting_schedule_row__item.xml
+++ b/linen-starter/src/main/res/layout/setting_schedule_row__item.xml
@@ -10,19 +10,20 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="12dp"
+        android:paddingTop="4dp"
         >
 
         <TextView
             android:id="@+id/setting_schedule_row__item__name"
-            android:paddingTop="4dp"
-            android:paddingStart="16dp"
+            android:paddingTop="0dp"
             android:paddingEnd="16dp"
+            android:paddingStart="16dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
-            android:textSize="17sp"
+            android:layout_height="32dp"
+            android:gravity="center_vertical"
+            android:textSize="14sp"
             android:textColor="@color/text_primary"
+            android:fontFamily="sans-serif-condensed"
             />
 
         <ImageButton
@@ -39,11 +40,23 @@
             android:background="?android:selectableItemBackgroundBorderless"
             />
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/setting_schedule_row__item__time_ranges"
+            android:layout_below="@id/setting_schedule_row__item__name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:overScrollMode="never"
+            />
+
         <View
             android:id="@+id/border"
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:layout_below="@id/setting_schedule_row__item__name"
+            android:layout_below="@id/setting_schedule_row__item__time_ranges"
+            android:layout_marginTop="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:background="@color/text_tertiary"
