--- a/linen-starter/src/main/res/layout/setting_schedule_row__item.xml
+++ b/linen-starter/src/main/res/layout/setting_schedule_row__item.xml
@@ -80,6 +80,17 @@
             android:layout_toStartOf="@id/setting_schedule_row__item__enabled"
             />
 
+        <TextView
+            android:id="@+id/setting_schedule_row__item__edit_time"
+            style="@style/SettingChannelsRowButtons"
+            android:layout_below="@id/border"
+            android:layout_toStartOf="@id/setting_schedule_row__item__history"
+            android:drawableStart="@drawable/ic_alarm_black_24dp"
+            android:drawablePadding="4dp"
+            android:text="EDIT"
+            android:gravity="center_vertical"
+            />
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
