update styles and phrases

--- a/linen-starter/src/main/res/layout/setting_schedule_row__item.xml
+++ b/linen-starter/src/main/res/layout/setting_schedule_row__item.xml
@@ -21,9 +21,9 @@
             android:layout_width="match_parent"
             android:layout_height="32dp"
             android:gravity="center_vertical"
-            android:textSize="14sp"
+            android:textSize="15sp"
             android:textColor="@color/text_primary"
-            android:fontFamily="sans-serif-condensed"
+            android:fontFamily="sans-serif-light"
             />
 
         <ImageButton
