add sample to start dragging immediately
without waiting for long press being triggered

--- a/linen-starter/src/main/res/layout/setting_channel_order_row__item.xml
+++ b/linen-starter/src/main/res/layout/setting_channel_order_row__item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
@@ -12,4 +11,11 @@
         android:textSize="17sp"
         android:textColor="@color/text_primary"
         />
-</LinearLayout>
+    <ImageView
+        android:id="@+id/setting_channel_order_row__item__start_dragging"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_drag_handle_black_24dp"
+        android:layout_alignParentEnd="true"
+        />
+</RelativeLayout>
