--- a/linen-starter/src/main/res/layout/setting_channel_order_row__item.xml
+++ b/linen-starter/src/main/res/layout/setting_channel_order_row__item.xml
@@ -3,6 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:paddingTop="10dp"
+    android:layout_marginBottom="10dp"
+    android:paddingBottom="10dp"
     >
     <TextView
         android:id="@+id/setting_channel_order_row__item__name"
