--- a/linen-starter/src/main/res/values/styles.xml
+++ b/linen-starter/src/main/res/values/styles.xml
@@ -129,7 +129,7 @@
     <color name="opaque_blue">#ecf1ff</color>
     <color name="opaque_green">#ecfff1</color>
 
-    <color name="light_gray">#e6e6e6</color>
+    <color name="light_gray">#cfcfcf</color>
     <color name="lighter_background_blue">#f8faff</color>
 
     <!-- this value is affected by the opacity of drawer icon (dark theme) -->
