--- a/linen-starter/src/main/res/layout/setting_my_channel_row__item.xml
+++ b/linen-starter/src/main/res/layout/setting_my_channel_row__item.xml
@@ -13,18 +13,6 @@
     android:paddingTop="12dp"
     >
 
-    <TextView
-        android:id="@+id/setting_my_channel_row__item__name"
-        android:paddingTop="4dp"
-        android:paddingStart="@dimen/setting_channels_row_padding"
-        android:paddingEnd="@dimen/setting_channels_row_padding"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:textSize="17sp"
-        android:textColor="@color/text_primary"
-        />
-
     <ImageButton
         android:id="@+id/setting_my_channel_row__item__menu"
         android:layout_width="wrap_content"
@@ -37,6 +25,19 @@
         android:layout_alignParentEnd="true"
         android:src="@drawable/ic_more_vert_24dp"
         android:background="?android:selectableItemBackgroundBorderless"
+        />
+
+    <TextView
+        android:id="@+id/setting_my_channel_row__item__name"
+        android:paddingTop="4dp"
+        android:paddingStart="@dimen/setting_channels_row_padding"
+        android:paddingEnd="@dimen/setting_channels_row_padding"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:layout_toStartOf="@id/setting_my_channel_row__item__menu"
+        android:textSize="17sp"
+        android:textColor="@color/text_primary"
         />
 
     <TextView
