--- a/linen-starter/src/main/res/layout/source_search_row__source_item.xml
+++ b/linen-starter/src/main/res/layout/source_search_row__source_item.xml
@@ -1,26 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingTop="0dp"
-    android:paddingEnd="0dp"
-    android:paddingBottom="0dp"
-    android:paddingStart="0dp"
-    android:gravity="center_vertical"
+    app:cardUseCompatPadding="true"
+    >
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingTop="12dp"
     >
     <TextView
-        android:id="@+id/source_search_row__source_item__body"
-        android:textSize="12sp"
+        android:id="@+id/source_search_row__source_item__title"
+        android:paddingTop="4dp"
+        android:paddingEnd="@dimen/setting_channels_row_padding"
+        android:paddingStart="@dimen/setting_channels_row_padding"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
-        android:paddingEnd="8dp"
-        android:paddingBottom="4dp"
-        android:paddingStart="10dp"
-        android:drawablePadding="6dp"
-        android:textColor="@color/lapis_lazuli"
-        android:maxLines="1"
+        android:layout_marginBottom="12dp"
+        android:textSize="17sp"
+        android:textColor="@color/text_primary"
+        android:lineSpacingExtra="4dp"
+        android:lineSpacingMultiplier="1.1"
         />
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/source_search_row__source_item__description"
+        android:paddingStart="@dimen/setting_channels_row_padding"
+        android:paddingEnd="@dimen/setting_channels_row_padding"
+        android:layout_below="@id/source_search_row__source_item__title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:textSize="15sp"
+        android:textColor="@color/text_secondary"
+        android:lineSpacingExtra="4dp"
+        android:lineSpacingMultiplier="1.2"
+        />
+
+    <View
+        android:id="@+id/border"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_below="@id/source_search_row__source_item__description"
+        android:layout_marginStart="@dimen/setting_channels_row_padding"
+        android:layout_marginEnd="@dimen/setting_channels_row_padding"
+        android:background="@color/text_tertiary"
+        />
+
+    <TextView
+        android:id="@+id/source_search_row__source_item__subscribe"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:text="SUBSCRIBE"
+        android:gravity="center_vertical"
+        android:fontFamily="sans-serif-condensed"
+        android:textColor="@color/text_primary"
+        android:textSize="12sp"
+        android:layout_below="@id/border"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="@dimen/setting_channels_row_padding"
+        />
+
+    <TextView
+        android:id="@+id/source_search_row__source_item__entries"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:text="ENTRIES"
+        android:gravity="center_vertical"
+        android:fontFamily="sans-serif-condensed"
+        android:textColor="@color/text_primary"
+        android:textSize="12sp"
+        android:layout_below="@id/border"
+        android:layout_toStartOf="@id/source_search_row__source_item__subscribe"
+        android:layout_marginEnd="@dimen/setting_channels_row_padding"
+        android:layout_marginStart="@dimen/setting_channels_row_padding"
+        />
+
+</RelativeLayout>
+
+</android.support.v7.widget.CardView>
