--- a/linen-starter/src/main/res/layout/source_search_row__source_item.xml
+++ b/linen-starter/src/main/res/layout/source_search_row__source_item.xml
@@ -27,7 +27,7 @@
         />
 
     <TextView
-        android:id="@+id/source_search_row__source_item__description"
+        android:id="@+id/source_search_row__source_item__url"
         android:paddingStart="@dimen/setting_channels_row_padding"
         android:paddingEnd="@dimen/setting_channels_row_padding"
         android:layout_below="@id/source_search_row__source_item__title"
@@ -42,42 +42,25 @@
 
     <View
         android:id="@+id/border"
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_below="@id/source_search_row__source_item__description"
-        android:layout_marginStart="@dimen/setting_channels_row_padding"
-        android:layout_marginEnd="@dimen/setting_channels_row_padding"
-        android:background="@color/text_tertiary"
+        android:layout_below="@id/source_search_row__source_item__url"
+        style="@style/SourceSearch.ItemBorder"
         />
 
     <TextView
         android:id="@+id/source_search_row__source_item__subscribe"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
         android:text="SUBSCRIBE"
-        android:gravity="center_vertical"
-        android:fontFamily="sans-serif-condensed"
-        android:textColor="@color/text_primary"
-        android:textSize="12sp"
         android:layout_below="@id/border"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="24dp"
-        android:layout_marginStart="@dimen/setting_channels_row_padding"
+        style="@style/SourceSearch.ItemBottomText"
         />
 
     <TextView
         android:id="@+id/source_search_row__source_item__entries"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
         android:text="ENTRIES"
-        android:gravity="center_vertical"
-        android:fontFamily="sans-serif-condensed"
-        android:textColor="@color/text_primary"
-        android:textSize="12sp"
         android:layout_below="@id/border"
         android:layout_toStartOf="@id/source_search_row__source_item__subscribe"
-        android:layout_marginEnd="@dimen/setting_channels_row_padding"
-        android:layout_marginStart="@dimen/setting_channels_row_padding"
+        style="@style/SourceSearch.ItemBottomText"
         />
 
 </RelativeLayout>
